@@ -20,7 +20,6 @@ enum {
 	ATA_OP_WRITE_UNC_EXT		= 0x45,	// lba48, no data, uses feat reg
 	ATA_OP_DOWNLOAD_MICROCODE	= 0x92,
 	ATA_OP_STANDBYNOW2		= 0x94,
-	ATA_OP_SETIDLE2			= 0x97,
 	ATA_OP_CHECKPOWERMODE2		= 0x98,
 	ATA_OP_SLEEPNOW2		= 0x99,
 	ATA_OP_PIDENTIFY		= 0xa1,
@@ -33,7 +32,8 @@ enum {
 	ATA_OP_DOORLOCK			= 0xde,
 	ATA_OP_DOORUNLOCK		= 0xdf,
 	ATA_OP_STANDBYNOW1		= 0xe0,
-	ATA_OP_SETIDLE1			= 0xe3,
+	ATA_OP_IDLEIMMEDIATE		= 0xe1,
+	ATA_OP_SETIDLE			= 0xe3,
 	ATA_OP_SET_MAX			= 0xf9,
 	ATA_OP_SET_MAX_EXT		= 0x37,
 	ATA_OP_CHECKPOWERMODE1		= 0xe5,
